--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text//javascript" src="main.js"></script>
 </body>
 
 </html>
