--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Discord Troll Tool</title>
     <meta name="description" content="Tokenを使って、Discordの荒らしができます。">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#">
+    <meta name="theme-color" content="#ff0000">
     <link rel="icon" type="image/x-icon" href="https://yudachik2.github.io/lib/favicon/favicon.ico">
     <link rel="apple-touch-icon" href="https://yudachik2.github.io/lib/favicon/apple-touch-icon-180x180.png" sizes="180x180">
     <script type="text/javascript" src="https://yudachik2.github.io/lib/lib/jquery.min.js"></script>
