--- a/index.html
+++ b/index.html
@@ -4,11 +4,18 @@
 <head>
     <meta charset="utf-8">
     <title>Discord Troll Tool</title>
-    <meta name="description" content="Tokenを使って、Discordの荒らしができます。">
+    <meta name="description" content="Tokenを使用したDiscordの荒らしツールです。">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#ff0000">
-    <link rel="icon" type="image/x-icon" href="https://yudachik2.github.io/lib/favicon/favicon.ico">
-    <link rel="apple-touch-icon" href="https://yudachik2.github.io/lib/favicon/apple-touch-icon-180x180.png" sizes="180x180">
+    <meta name="theme-color" content="#ff6347">
+    <meta property="og:url" content="https://yudachik2.github.io/discord-troll-tool/">
+    <meta property="og:type" content="article">
+    <meta property=" og:title" content="Discord Troll Tool">
+    <meta property="og:description" content="Tokenを使用したDiscordの荒らしツールです。">
+    <meta property="og:site_name" content="荒らし連合">
+    <meta property="og:image" content="https://yudachik2.github.io/assets/image/site-image.png">
+    <link rel="icon" type="image/x-icon" href="https://yudachik2.github.io/assets/favicon/favicon.ico">
+    <link rel="apple-touch-icon" href="https://yudachik2.github.io/assets/favicon/apple-touch-icon-180x180.png"
+        sizes="180x180">
     <script type="text/javascript" src="https://yudachik2.github.io/lib/lib/jquery.min.js"></script>
 </head>
 
