--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="utf-8">
     <title>Discord Troll Tool</title>
-    <meta name="description" content="Tokenを使用したDiscordの荒らしツールです。">
+    <meta name="description" content="インストール不要で使えるTokenを操作して荒らすDiscordの荒らしツールです。">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#ff6347">
     <meta property="og:url" content="https://yudachik2.github.io/discord-troll-tool/">
     <meta property="og:type" content="article">
     <meta property=" og:title" content="Discord Troll Tool">
-    <meta property="og:description" content="Tokenを使用したDiscordの荒らしツールです。">
+    <meta property="og:description" content="インストール不要で使えるTokenを操作して荒らすDiscordの荒らしツールです。">
     <meta property="og:site_name" content="荒らし連合">
     <meta property="og:image" content="https://yudachik2.github.io/assets/image/site-image.png">
     <link rel="icon" type="image/x-icon" href="https://yudachik2.github.io/assets/favicon/favicon.ico">
     <link rel="apple-touch-icon" href="https://yudachik2.github.io/assets/favicon/apple-touch-icon-180x180.png"
         sizes="180x180">
-    <script type="text/javascript" src="https://yudachik2.github.io/lib/lib/jquery.min.js"></script>
+    <script type="text/javascript" src="https://yudachik2.github.io/assets/lib/jquery/jquery.min.js"></script>
 </head>
 
 <body>
