--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
 
 <head>
     <meta charset="utf-8">
@@ -16,11 +16,11 @@
     <link rel="icon" type="image/x-icon" href="https://yudachik2.github.io/assets/favicon/favicon.ico">
     <link rel="apple-touch-icon" href="https://yudachik2.github.io/assets/favicon/apple-touch-icon-180x180.png"
         sizes="180x180">
-    <script type="text/javascript" src="https://yudachik2.github.io/assets/lib/jquery/jquery.min.js"></script>
+    <script src="https://yudachik2.github.io/assets/lib/jquery/jquery.min.js"></script>
 </head>
 
 <body>
-    <script type="text/javascript" src="main.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
