--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <header role="banner">
             <div class="banner-container">
                 <h1 class="banner-title">Discord Troll Tool</h1>
-                <span class="banner-version">Ver. 3.1.1</span>
+                <span class="banner-version">Ver. 3.1.2</span>
             </div>
         </header>
         <main role="main">
@@ -89,7 +89,7 @@
                             <option value="100">100</option>
                             <option value="500">500</option>
                             <option value="1000">1000</option>
-                            <option value="infinity">Infinity</option>
+                            <option value="Infinity">Infinity</option>
                         </select>
                         <br>
                         <label for="random-suffix-checkbox">Add a random character at the end:</label>
